[package]
name = "kyokdy-api"
version = "0.1.0"
authors = ["himanoa <matsunoappy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
tokio-postgres = "0.5.4"
dotenv = "0.15.0"
