[package]
name = "kyokdy-api"
version = "0.1.0"
authors = ["himanoa <matsunoappy@gmail.com>"]
edition = "2018"
[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "import-channels-batch"
path = "src/bin/import_channels_batch.rs"
[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
tokio-postgres = "0.5.4"
dotenv = "0.15.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
chrono = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1.1"
anyhow = "1.0.26"
thiserror = "1.0"
async-trait = "0.1.35"
structopt = "0.3"
reqwest = { version = "0.10", features = ["json"] }

[features]
integration_test = []
